--- a/modules/mv_models/package.json
+++ b/modules/mv_models/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mv_interface",
+  "name": "mv_models",
   "version": "1.0.0",
   "description": "",
-  "main": "MVDB.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
